tests/algorithms/x/Clojure/greedy_methods/minimum_waiting_time.out
Syntax error (IllegalArgumentException) compiling fn* at (/workspace/mochi/tests/algorithms/x/Clojure/greedy_methods/minimum_waiting_time.clj:46:1).
Cannot assign to non-mutable: minimum_waiting_time_queries

Full report at:
/tmp/clojure-17438456463956526958.edn